# opencampus-ai-framework

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_PHILOSOPHY.md  README.md  SECURITY.md  pyproject.toml
.ai/: README.md
.ai/prompts/: README.md
apps/: README.md
apps/api/: README.md  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: c6cd233298fb_create_audit_events_table.py
apps/api/app/: main.py
apps/api/app/api/routers/: health.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  audit_event.py
docs/: Architecture.md  DevelopmentStandards.md  Glossary.md  Journal.md  Project_Journal.md  README.md  Roadmap.md  Vision.md
docs/adr/: ADR-0002.md  ADR-0003-project-structure.md  ADR-0004-project-configuration.md  ADR-0005-local-development.md  ADR-0006-api-structure.md  ADR-0007-fastapi-lifespan.md  ADR-0008-configuration-management.md  ADR-0009-local-infrastructure.md  ADR-0010-local-service-port-isolation.md  ADR-0011-database-layer.md  ADR-0012-audit-event-model.md  ADR-0013-repository-service-pattern.md  README.md
docs/development/: DevelopmentEnvironment.md
docs/journal/: 2026-07-07.md
examples/: README.md
infrastructure/: README.md  docker-compose.yml
learning/: 00-roadmap.md  01-git.md  02-python.md  04-fastapi.md  05-postgresql.md  10-docker.md
scripts/: README.md
services/: README.md
shared/: README.md
tests/: README.md
